Issue/294 Vectorize ByteInternal::contentEquals (#387)
* fixed compareAndSwapLong which was picking up  @Deprecated from super interface

* Issue/294

* #294 changed to use realReadRemaining()

* #294 added ->        Jvm.debug().on(BytesInternal.class, e);

* #205 added final

* #205 improved test for all types of elastic bytes

* #205 updated test based on feedback from Peter

* #205 simplified heap bytes store access

* #205 added    <id>java17</id> profile

* #294 removed white space

* #294 catch assertion error

* #294 removed java11 and java17 profiles

Co-authored-by: Rob Austin <rob.austin@boundedbuffer.co.uk>